--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -2,6 +2,9 @@ nav {
   background-color: #c3c0db;
   ul {
     .logo {
+      .muLogo{
+        background-color: #5e5b78;
+      }
       h1 {
         color: #5e5b78;
       }
