--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+.pacifico-regular {
+  font-family: "Pacifico", cursive;
+  font-weight: 500;
+  font-style: normal;
+}
+
+
 nav {
   background-color: #c3c0db;
   ul {
