--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -1,5 +1,6 @@
 .searchGroup {
-  @media screen and (min-width: 1370px) {
+  background-size: auto 100%;
+  @media screen and (min-width: 768px) {
     background-size: 100%;
   }
 }
