--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
-.pacifico-regular {
-  font-family: "Pacifico", cursive;
-  font-weight: 500;
+.lobster-regular {
+  font-family: "Lobster", sans-serif;
   font-style: normal;
 }
+
 
 
 nav {
