--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,6 +25,7 @@ ul {
   align-items: center;
   padding: 4rem;
   button {
+    min-width: 200px;
     width: 70%;
     border-radius: 10px;
     color: #5e5b78;
